--- a/Muisc maschine/Muisc maschine.csproj
+++ b/Muisc maschine/Muisc maschine.csproj
@@ -43,11 +43,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MidiEvent.cs" />
+    <Compile Include="Music.cs" />
+    <Compile Include="MusicalNotation.cs" />
+    <Compile Include="Note.cs" />
+    <Compile Include="NoteOff.cs" />
+    <Compile Include="NoteOn.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="ProgramChange.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Music.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
